multi-cluster-scale/manifests/argocd-apps/ns-cert-manager.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: cert-manager
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/warn: restricted
  name: cert-manager
spec:
  finalizers:
  - kubernetes
