multi-cluster-scale/manifests/argocd-apps/ns-kyverno.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: kyverno
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/warn: restricted
  name: kyverno
spec:
  finalizers:
  - kubernetes
