multi-cluster-scale/manifests/argocd-apps/polaris.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: polaris
    pod-security.kubernetes.io/enforce: restricted
  name: polaris
spec:
  finalizers:
  - kubernetes
