multi-cluster-scale/manifests/argocd-apps/policy-reporter.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: policy-reporter
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/warn: restricted
  name: policy-reporter
spec:
  finalizers:
  - kubernetes
